--- a/src/WPFExample/packages.config
+++ b/src/WPFExample/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DuEDrawingControl" version="1.0.1" targetFramework="net40" />
+  <package id="PropertyTools" version="3.1.0-alpha0041" targetFramework="net46" />
+  <package id="PropertyTools.Wpf" version="3.1.0-alpha0041" targetFramework="net46" />
 </packages>
