支持开启FullUI模式

--- a/src/DuEDrawingControl/DuEDrawingControl.csproj
+++ b/src/DuEDrawingControl/DuEDrawingControl.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
-    <UseWPF>true</UseWPF> 
+    <UseWPF>true</UseWPF>
+    <LangVersion>latest</LangVersion>
     <UseWindowsForms>true</UseWindowsForms>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <Platforms>x64</Platforms>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/weianweigan/DuEDrawingControl</PackageProjectUrl>
